Fixed the original stylesheets to be more readable, and use a branch to avoid conflicts and test

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -72,6 +72,17 @@ a:active {
   color: DarkGoldenRod;
 }
 
+
+.button {
+  background-color: #FDB927;
+  color: darkorchid;
+  border: 2px solid darkorchid;
+}
+
+.button:hover {
+  background-color: #ffffff;
+  color: darkorchid;
+}
 //User Selected Colors
     //Change the Users Background Color
     //background-color: <%= @profile.background_color %>
