--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,85 @@
 // Place all the styles related to the Comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+input[type=text]
+{
+    width: 50%;
+    padding: 12px 12px;
+    border: 2px solid #ccc;
+    background-color: #f8f8f8
+}
+
+textarea 
+{
+    width: 100%;
+    height: 300px;
+    padding: 12px 12px;
+    border: 2px solid #ccc;
+    background-color: #f8f8f8;
+    resize: none;
+}
+
+input[type=button], input[type=submit]
+{
+    background-color: #4CAF50;
+    float: right;
+    border: none;
+    color: white;
+    padding: 16px 20px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+//Bodoni Italic is the Font Used by the Loss Angelos Lakers
+//Colors Are Set To Lakers Colors
+
+h1 
+  {
+  font-family: Bodoni Italic;
+  font-size: 32px;
+  color: #FDB927;
+  }
+
+body
+  {
+    background: #552583;
+  }
+  
+p
+  {
+    font-family: arial;
+    color: #FDB927
+  }
+  
+  
+a:link {
+  color: #FDB927;
+  font-family: Bodoni Italic;
+}
+
+/* visited link */
+a:visited {
+  color: white;
+}
+
+/* mouse over link */
+a:hover {
+  color: DarkOrchid;
+}
+
+/* selected link */
+a:active {
+  color: DarkGoldenRod;
+}
+
+
+.button {
+  background-color: #FDB927;
+  color: darkorchid;
+  border: 2px solid darkorchid;
+}
+
+.button:hover {
+  background-color: #ffffff;
+  color: darkorchid;
+}
